    Helmut Grohne)
  * [tilegx] linux-libc-dev: Install <arch/*> headers in arch-specific
    directory (Closes: #823632; thanks to Helmut Grohne)
  * [rt] Update to 4.6-rc7-rt1 and re-enable
  * Fold debian/config/README into debian/README.source
  * debian/README.source: Rewrite and expand explanation of kernel config file
    construction

  [ Aurelien Jarno ]
  * [mips64el] Set CPU to MIPS64 R2.
  * [mips] Set CPU to MIPS32/64 R2.

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 17 May 2016 23:33:30 +0100

linux (4.6-1~exp1) experimental; urgency=medium

  * New upstream release: http://kernelnewbies.org/Linux_4.6

  [ Ben Hutchings ]
  * Re-apply "[media] videobuf2-v4l2: Verify planes array in buffer dequeueing",
    reverted upstream in 4.6
  * [arm64] Enable RANDOMIZE_BASE (kASLR)
  * [armhf] dsa: Enable NET_DSA_MV88E6123 as module, replacing
    NET_DSA_MV88E6123_61_65

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 17 May 2016 02:39:47 +0100

linux (4.6~rc7-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Ben Hutchings ]
  * [hppa] Enable MLONGCALLS (fixes FTBFS)
  * [alpha] fs: Disable BINFMT_EM86 (obsoleted by binfmt_misc; fixes FTBFS)

  [ Aurelien Jarno ]
  * [mips*/octeon] Enable EDAC, EDAC_MM_EDAC, EDAC_OCTEON_L2C,
    EDAC_OCTEON_LMC, EDAC_OCTEON_PC, EDAC_OCTEON_PCI.

 -- Ben Hutchings <ben@decadent.org.uk>  Mon, 09 May 2016 03:39:32 +0100

linux (4.6~rc5-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Ben Hutchings ]
  * [armhf] Enable EFI, RTC_DRV_EFI
  * Update config for renaming/removal/replacement/merging/splitting of various
    symbols
  * *lockdep*,linux-perf: Remove '-rcN' from installation paths

  [ Martin Michlmayr ]
  * [armel, armhf] Use new Marvell CESA driver.
  * [arm64] Enable support for NVIDIA Tegra.
  * [arm64] udeb: Create fb-modules.

 -- Ben Hutchings <ben@decadent.org.uk>  Fri, 29 Apr 2016 10:40:36 +0200

linux (4.6~rc3-1~exp1) experimental; urgency=medium
