@@ -1,18 +1,18 @@
 From: J. R. Okajima <hooanon05@yahoo.co.jp>
-Date: Wed Mar 23 20:35:31 2016 +0900
-Subject: aufs4.x-rcN base patch
-Origin: https://github.com/sfjro/aufs4-standalone/tree/751023bb49e09b10f7ab4c8742eb4cee234506f4
+Date: Sat May 21 13:01:18 2016 +0900
+Subject: aufs4.6 base patch
+Origin: https://github.com/sfjro/aufs4-standalone/tree/57b92ac80a7564243de7e5c69f77e1616af9808a
 Bug-Debian: https://bugs.debian.org/541828
 
 Patch headers added by debian/patches/features/all/aufs4/gen-patch
 
-aufs4.x-rcN base patch
+aufs4.6 base patch
 
 diff --git a/MAINTAINERS b/MAINTAINERS
-index f17159a..532681a 100644
+index 9c567a4..a62aea4 100644
 --- a/MAINTAINERS
 +++ b/MAINTAINERS
-@@ -2120,6 +2120,19 @@ F:	include/linux/audit.h
+@@ -2128,6 +2128,19 @@ F:	include/linux/audit.h
  F:	include/uapi/linux/audit.h
  F:	kernel/audit*
  
@@ -33,10 +33,10 @@ index f17159a..532681a 100644
  M:	Miguel Ojeda Sandonis <miguel.ojeda.sandonis@gmail.com>
  W:	http://miguelojeda.es/auxdisplay.htm
 diff --git a/drivers/block/loop.c b/drivers/block/loop.c
-index 423f4ca..0b816b2 100644
+index 80cf8ad..ba9e4a7 100644
 --- a/drivers/block/loop.c
 +++ b/drivers/block/loop.c
-@@ -706,6 +706,24 @@ static inline int is_loop_device(struct file *file)
+@@ -712,6 +712,24 @@ static inline int is_loop_device(struct file *file)
  	return i && S_ISBLK(i->i_mode) && MAJOR(i->i_rdev) == LOOP_MAJOR;
  }
  
@@ -62,7 +62,7 @@ index 423f4ca..0b816b2 100644
  
  static ssize_t loop_attr_show(struct device *dev, char *page,
 diff --git a/fs/dcache.c b/fs/dcache.c
-index 32ceae3..bc599d0 100644
+index d5ecc6e..4de75b2 100644
 --- a/fs/dcache.c
 +++ b/fs/dcache.c
 @@ -1156,7 +1156,7 @@ enum d_walk_ret {
@@ -130,7 +130,7 @@ index cf377cf..0ebcdc5 100644
  {
  	mm_segment_t old_fs;
 diff --git a/fs/splice.c b/fs/splice.c
-index 9947b5c..9037c8c 100644
+index dd9bf7e..9326c2a 100644
 --- a/fs/splice.c
 +++ b/fs/splice.c
 @@ -1111,8 +1111,8 @@ EXPORT_SYMBOL(generic_splice_sendpage);
@@ -170,10 +170,10 @@ index f87d308..9a290b3 100644
  static inline void fput_light(struct file *file, int fput_needed)
  {
 diff --git a/include/linux/fs.h b/include/linux/fs.h
-index bb703ef..aff4f16 100644
+index 70e61b5..351bb05 100644
 --- a/include/linux/fs.h
 +++ b/include/linux/fs.h
-@@ -1261,6 +1261,7 @@ extern void fasync_free(struct fasync_struct *);
+@@ -1277,6 +1277,7 @@ extern void fasync_free(struct fasync_struct *);
  /* can be called from interrupts */
  extern void kill_fasync(struct fasync_struct **, int, int);
  
@@ -181,7 +181,7 @@ index bb703ef..aff4f16 100644
  extern void __f_setown(struct file *filp, struct pid *, enum pid_type, int force);
  extern void f_setown(struct file *filp, unsigned long arg, int force);
  extern void f_delown(struct file *filp);
-@@ -1642,6 +1643,7 @@ struct file_operations {
+@@ -1660,6 +1661,7 @@ struct file_operations {
  	ssize_t (*sendpage) (struct file *, struct page *, int, size_t, loff_t *, int);
  	unsigned long (*get_unmapped_area)(struct file *, unsigned long, unsigned long, unsigned long, unsigned long);
  	int (*check_flags)(int);
@@ -189,7 +189,7 @@ index bb703ef..aff4f16 100644
  	int (*flock) (struct file *, int, struct file_lock *);
  	ssize_t (*splice_write)(struct pipe_inode_info *, struct file *, loff_t *, size_t, unsigned int);
  	ssize_t (*splice_read)(struct file *, loff_t *, struct pipe_inode_info *, size_t, unsigned int);
-@@ -1700,6 +1702,12 @@ ssize_t rw_copy_check_uvector(int type, const struct iovec __user * uvector,
+@@ -1718,6 +1720,12 @@ ssize_t rw_copy_check_uvector(int type, const struct iovec __user * uvector,
  			      struct iovec *fast_pointer,
  			      struct iovec **ret_pointer);
  
