@@ -1,15 +1,15 @@
 From: J. R. Okajima <hooanon05@yahoo.co.jp>
-Date: Wed Mar 23 20:35:31 2016 +0900
-Subject: aufs4.x-rcN standalone patch
-Origin: https://github.com/sfjro/aufs4-standalone/tree/751023bb49e09b10f7ab4c8742eb4cee234506f4
+Date: Sat May 21 13:01:18 2016 +0900
+Subject: aufs4.6 standalone patch
+Origin: https://github.com/sfjro/aufs4-standalone/tree/57b92ac80a7564243de7e5c69f77e1616af9808a
 Bug-Debian: https://bugs.debian.org/541828
 
 Patch headers added by debian/patches/features/all/aufs4/gen-patch
 
-aufs4.x-rcN standalone patch
+aufs4.6 standalone patch
 
 diff --git a/fs/dcache.c b/fs/dcache.c
-index bc599d0..1b735a9 100644
+index 4de75b2..0dd0237 100644
 --- a/fs/dcache.c
 +++ b/fs/dcache.c
 @@ -1261,6 +1261,7 @@ rename_retry:
@@ -21,7 +21,7 @@ index bc599d0..1b735a9 100644
  /*
   * Search for at least 1 mount point in the dentry's subdirs.
 diff --git a/fs/exec.c b/fs/exec.c
-index 9bdf0ed..8c87f6c 100644
+index c4010b8..c2b225f 100644
 --- a/fs/exec.c
 +++ b/fs/exec.c
 @@ -104,6 +104,7 @@ bool path_noexec(const struct path *path)
@@ -173,7 +173,7 @@ index 7115c5d..ac2bd69 100644
  static void fsnotify_mark_destroy(struct work_struct *work)
  {
 diff --git a/fs/open.c b/fs/open.c
-index 55bdc75..fd1df73 100644
+index 081d3d6..b4359e4 100644
 --- a/fs/open.c
 +++ b/fs/open.c
 @@ -64,6 +64,7 @@ int do_truncate(struct dentry *dentry, loff_t length, unsigned int time_attrs,
@@ -213,7 +213,7 @@ index 0ebcdc5..0a43d7b 100644
  ssize_t __kernel_write(struct file *file, const char *buf, size_t count, loff_t *pos)
  {
 diff --git a/fs/splice.c b/fs/splice.c
-index 9037c8c..72cc871 100644
+index 9326c2a..0606690 100644
 --- a/fs/splice.c
 +++ b/fs/splice.c
 @@ -1124,6 +1124,7 @@ long do_splice_from(struct pipe_inode_info *pipe, struct file *out,
@@ -224,7 +224,7 @@ index 9037c8c..72cc871 100644
  
  /*
   * Attempt to initiate a splice from a file to a pipe.
-@@ -1150,6 +1151,7 @@ long do_splice_to(struct file *in, loff_t *ppos,
+@@ -1153,6 +1154,7 @@ long do_splice_to(struct file *in, loff_t *ppos,
  
  	return splice_read(in, ppos, pipe, len, flags);
  }
