@@ -9,6 +9,8 @@ linux (4.6-1~exp2) UNRELEASED; urgency=medium
   * Fold debian/config/README into debian/README.source
   * debian/README.source: Rewrite and expand explanation of kernel config file
     construction
+  * aufs: Update support patches to aufs4.6-20160523
+    - mmap: Fix use-after-free in remap_file_pages(2)
 
   [ Aurelien Jarno ]
   * [mips64el] Set CPU to MIPS64 R2.
